[tool.poetry]
name = "xmas-jam"
version = "0.1.0"
description = ""
authors = ["Gania Sant'Anna <gania@groover.co>"]
readme = "README.md"
packages = [{include = "xmas_jam"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
